responses fragment